fixed sponsor logo alignment

--- a/src/pages/sponsorship/style.less
+++ b/src/pages/sponsorship/style.less
@@ -63,7 +63,7 @@
 
     img {
         height: 10vh;
-        margin: 10px 50px;
+        margin: 10px 5vw;
         max-width: 33vw;
     }
 }
